// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FirewallRuleDelete Dialog operator Renders the component 1`] = `
<fragment-stub><span><div data-test="delete-item" class="v-list-item__title">
          Remove
        </div></span><span class="v-tooltip v-tooltip--bottom"><!----></span><span><i aria-hidden="true" data-test="delete-icon" class="v-icon notranslate v-icon--disabled v-icon--left material-icons theme--light">delete</i></span>
  <div role="dialog" class="v-dialog__container">
    <!---->
  </div>
</fragment-stub>
`;

exports[`FirewallRuleDelete Dialog owner Renders the component 1`] = `
<fragment-stub><span><div data-test="delete-item" class="v-list-item__title">
          Remove
        </div></span><span class="v-tooltip v-tooltip--bottom"><!----></span><span><i aria-hidden="true" data-test="delete-icon" class="v-icon notranslate v-icon--left material-icons theme--light">delete</i></span>
  <div role="dialog" class="v-dialog__container"></div>
</fragment-stub>
`;

exports[`FirewallRuleDelete Icon operator Renders the component 1`] = `
<fragment-stub><span><div data-test="delete-item" class="v-list-item__title">
          Remove
        </div></span><span class="v-tooltip v-tooltip--bottom"><!----></span><span><i aria-hidden="true" data-test="delete-icon" class="v-icon notranslate v-icon--disabled v-icon--left material-icons theme--light">delete</i></span>
  <div role="dialog" class="v-dialog__container">
    <!---->
  </div>
</fragment-stub>
`;

exports[`FirewallRuleDelete Icon owner Renders the component 1`] = `
<fragment-stub><span><div data-test="delete-item" class="v-list-item__title">
          Remove
        </div></span><span class="v-tooltip v-tooltip--bottom"><!----></span><span><i aria-hidden="true" data-test="delete-icon" class="v-icon notranslate v-icon--left material-icons theme--light">delete</i></span>
  <div role="dialog" class="v-dialog__container">
    <!---->
  </div>
</fragment-stub>
`;
